@@ -1,6 +1,7 @@
 Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
 
 {{ $NEXT }}
+    - add verify_policy method
     - add wait_for_task method
 
 0.001006  2020-07-21 10:19:37+02:00 Europe/Vienna
